Samsung jump fix

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   max-width: 100%;
   text-align: center;
